@@ -626,6 +626,7 @@ test_player_it_portamento_envelope_reset_cg
 test_player_xm_portamento_envelope_reset
 test_player_xm_portamento_target
 test_player_xm_keyoff_with_instrument
+test_player_xm_no_cxx_dxx_memory
 test_player_xm_envelope_zero_loop
 test_player_xm_envelope_set_pos
 test_player_ft2_note_noins_after_keyoff
