@@ -1,0 +1,120 @@
+20 0 0 0 1753088 60 0 1024 -127 0 0 0
+20 0 0 1 1753088 60 0 1024 127 0 0 0
+40 0 1 0 1753088 60 0 1024 -127 7 0 0
+40 0 1 1 1753088 60 0 1024 127 7 0 0
+60 0 2 0 1753088 60 0 1024 -127 14 0 0
+60 0 2 1 1753088 60 0 1024 127 14 0 0
+80 0 3 0 1753088 60 0 1024 -127 21 0 0
+80 0 3 1 1753088 60 0 1024 127 21 0 0
+100 0 4 0 1753088 60 0 1024 -127 29 0 0
+100 0 4 1 1753088 60 0 1024 127 29 0 0
+120 0 5 0 1753088 60 0 1024 -127 4 0 0
+120 0 5 1 1753088 60 0 1024 127 4 0 0
+140 1 0 0 1753088 60 0 1024 -127 11 0 0
+140 1 0 1 1753088 60 0 1024 127 11 0 0
+160 1 1 0 1753088 60 0 960 -127 18 0 0
+160 1 1 1 1753088 60 0 960 127 18 0 0
+180 1 2 0 1753088 60 0 896 -127 26 0 0
+180 1 2 1 1753088 60 0 896 127 26 0 0
+200 1 3 0 1753088 60 0 832 -127 1 0 0
+200 1 3 1 1753088 60 0 832 127 1 0 0
+220 1 4 0 1753088 60 0 768 -127 8 0 0
+220 1 4 1 1753088 60 0 768 127 8 0 0
+240 1 5 0 1753088 60 0 704 -127 15 0 0
+240 1 5 1 1753088 60 0 704 127 15 0 0
+260 2 0 0 1753088 60 0 704 -127 23 0 0
+260 2 0 1 1753088 60 0 704 127 23 0 0
+280 2 1 0 1753088 60 0 704 -127 30 0 0
+280 2 1 1 1753088 60 0 704 127 30 0 0
+300 2 2 0 1753088 60 0 704 -127 5 0 0
+300 2 2 1 1753088 60 0 704 127 5 0 0
+320 2 3 0 1753088 60 0 704 -127 12 0 0
+320 2 3 1 1753088 60 0 704 127 12 0 0
+340 2 4 0 1753088 60 0 704 -127 20 0 0
+340 2 4 1 1753088 60 0 704 127 20 0 0
+360 2 5 0 1753088 60 0 704 -127 27 0 0
+360 2 5 1 1753088 60 0 704 127 27 0 0
+380 3 0 0 1753088 60 0 704 -127 2 0 0
+380 3 0 1 1753088 60 0 704 127 2 0 0
+400 3 1 0 1753088 60 0 704 -127 9 0 0
+400 3 1 1 1753088 60 0 704 127 9 0 0
+420 3 2 0 1753088 60 0 704 -127 17 0 0
+420 3 2 1 1753088 60 0 704 127 17 0 0
+440 3 3 0 1753088 60 0 704 -127 24 0 0
+440 3 3 1 1753088 60 0 704 127 24 0 0
+460 3 4 0 1753088 60 0 704 -127 31 0 0
+460 3 4 1 1753088 60 0 704 127 31 0 0
+480 3 5 0 1753088 60 0 704 -127 6 0 0
+480 3 5 1 1753088 60 0 704 127 6 0 0
+500 4 0 0 1753088 60 0 0 -127 14 0 0
+500 4 0 1 1753088 60 0 0 127 14 0 0
+520 4 1 0 1753088 60 0 0 -127 21 0 0
+520 4 1 1 1753088 60 0 0 127 21 0 0
+540 4 2 0 1753088 60 0 0 -127 28 0 0
+540 4 2 1 1753088 60 0 0 127 28 0 0
+560 4 3 0 1753088 60 0 0 -127 4 0 0
+560 4 3 1 1753088 60 0 0 127 4 0 0
+580 4 4 0 1753088 60 0 0 -127 11 0 0
+580 4 4 1 1753088 60 0 0 127 11 0 0
+600 4 5 0 1753088 60 0 0 -127 18 0 0
+600 4 5 1 1753088 60 0 0 127 18 0 0
+620 5 0 0 1753088 60 0 0 -127 0 0 0
+620 5 0 1 1753088 60 0 0 127 0 0 0
+640 5 1 0 1753088 60 0 0 -127 7 0 0
+640 5 1 1 1753088 60 0 0 127 7 0 0
+660 5 2 0 1753088 60 0 0 -127 14 0 0
+660 5 2 1 1753088 60 0 0 127 14 0 0
+680 5 3 0 1753088 60 0 0 -127 21 0 0
+680 5 3 1 1753088 60 0 0 127 21 0 0
+700 5 4 0 1753088 60 0 0 -127 29 0 0
+700 5 4 1 1753088 60 0 0 127 29 0 0
+720 5 5 0 1753088 60 0 0 -127 4 0 0
+720 5 5 1 1753088 60 0 0 127 4 0 0
+740 6 0 0 1753088 60 0 0 -127 11 0 0
+740 6 0 1 1753088 60 0 0 127 11 0 0
+760 6 1 0 1753088 60 0 64 -127 18 0 0
+760 6 1 1 1753088 60 0 64 127 18 0 0
+780 6 2 0 1753088 60 0 128 -127 26 0 0
+780 6 2 1 1753088 60 0 128 127 26 0 0
+800 6 3 0 1753088 60 0 192 -127 1 0 0
+800 6 3 1 1753088 60 0 192 127 1 0 0
+820 6 4 0 1753088 60 0 256 -127 8 0 0
+820 6 4 1 1753088 60 0 256 127 8 0 0
+840 6 5 0 1753088 60 0 320 -127 15 0 0
+840 6 5 1 1753088 60 0 320 127 15 0 0
+860 7 0 0 1753088 60 0 320 -127 23 0 0
+860 7 0 1 1753088 60 0 320 127 23 0 0
+880 7 1 0 1753088 60 0 320 -127 30 0 0
+880 7 1 1 1753088 60 0 320 127 30 0 0
+900 7 2 0 1753088 60 0 320 -127 5 0 0
+900 7 2 1 1753088 60 0 320 127 5 0 0
+920 7 3 0 1753088 60 0 320 -127 12 0 0
+920 7 3 1 1753088 60 0 320 127 12 0 0
+940 7 4 0 1753088 60 0 320 -127 20 0 0
+940 7 4 1 1753088 60 0 320 127 20 0 0
+960 7 5 0 1753088 60 0 320 -127 27 0 0
+960 7 5 1 1753088 60 0 320 127 27 0 0
+980 8 0 0 1753088 60 0 320 -127 2 0 0
+980 8 0 1 1753088 60 0 320 127 2 0 0
+1000 8 1 0 1753088 60 0 320 -127 9 0 0
+1000 8 1 1 1753088 60 0 320 127 9 0 0
+1020 8 2 0 1753088 60 0 320 -127 17 0 0
+1020 8 2 1 1753088 60 0 320 127 17 0 0
+1040 8 3 0 1753088 60 0 320 -127 24 0 0
+1040 8 3 1 1753088 60 0 320 127 24 0 0
+1060 8 4 0 1753088 60 0 320 -127 31 0 0
+1060 8 4 1 1753088 60 0 320 127 31 0 0
+1080 8 5 0 1753088 60 0 320 -127 6 0 0
+1080 8 5 1 1753088 60 0 320 127 6 0 0
+1100 9 0 0 1753088 60 0 0 -127 14 0 0
+1100 9 0 1 1753088 60 0 0 127 14 0 0
+1120 9 1 0 1753088 60 0 0 -127 21 0 0
+1120 9 1 1 1753088 60 0 0 127 21 0 0
+1140 9 2 0 1753088 60 0 0 -127 28 0 0
+1140 9 2 1 1753088 60 0 0 127 28 0 0
+1160 9 3 0 1753088 60 0 0 -127 4 0 0
+1160 9 3 1 1753088 60 0 0 127 4 0 0
+1180 9 4 0 1753088 60 0 0 -127 11 0 0
+1180 9 4 1 1753088 60 0 0 127 11 0 0
+1200 9 5 0 1753088 60 0 0 -127 18 0 0
+1200 9 5 1 1753088 60 0 0 127 18 0 0
